# python_sdia

./: pyproject.toml  requirement.txt
.ipynb_checkpoints/: main-checkpoint.py
Labs/Lab1/: lab1.ipynb  requirement.txt
Labs/Lab1/.ipynb_checkpoints/: lab1-checkpoint.ipynb  test_is_unique-checkpoint.py
Labs/Lab1/tests/: test_functions_lab1.py
Labs/Lab2/: inner-product-of-complex-matrices.ipynb  lab2.ipynb  sample.npy
