[project]
name = "python-sdia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.7",
    "ipynb>=0.5.1",
    "nbimporter>=0.3.4",
    "notebook>=7.4.5",
    "pytest>=8.4.2",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "scipy>=1.16.2",
    "ipytest>=0.14.2",
]
